--- a/style.css
+++ b/style.css
@@ -1,26 +1,13 @@
 *{
-    margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    margin: 0;
 }
 
-.body{
-    background-color: blue;
+:root{
+    --fundo: var(#EEEEEE);
 }
 
-nav{
-    display: grid;
-    background-color: black;
-    height: 14vh;
+body{
+    background-color: var(--fundo)
 }
 
-#icon1 {
-    width: 10vw;
-    height: 10vh;
-    
-}
-
-#barra {
-    width: 5vw;
-    height: 5vh;
-}
